--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://github.com/anupama-bhatta" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/anupamabhatta" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="mailto:bhatta.anupama1@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
@@ -64,8 +64,7 @@
 								At Loyal, I am responsible for managing and improving listings data to publish accurate and complete information to 3rd party listing sites including Google, Bing, Apple, Facebook, and Foursquare.<br/><br/>
 								My passion lies in problem-solving by leveraging data to derive and share valuable insights.</br>
 								If it helps to know, I built this website by myself (starting from a template) which further demonstrates my ability to rapidly learn new software, then implement it.</br>
-									If you wish to learn more about my skills, do check out my <a href="https://github.com/anupama-bhatta">GitHub</a> profile!<br/>
-
+									If you wish to learn more about my skills, do check out my <a href="https://github.com/anupamabhatta">GitHub</a> profile!<br/>
 								</p>
 							</header>
 
@@ -86,10 +85,10 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/anupama-bhatta/tictactoegame" class="image fit" title="View"><img src="images/tictactoe.png" alt="" />Tic-Tac-Toe Game</a>
+										<a href="https://github.com/anupamabhatta/tictactoegame" class="image fit" title="View"><img src="images/tictactoe.png" alt="" />Tic-Tac-Toe Game</a>
 									</article>
 									<article class="item">
-										<a href="https://github.com/anupama-bhatta/collegedirectory" class="image fit" title="View"><img src="images/directory.png" alt="" />College Directory Project</a>
+										<a href="https://github.com/anupamabhatta/collegedirectory" class="image fit" title="View"><img src="images/directory.png" alt="" />College Directory Project</a>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
@@ -97,21 +96,21 @@
 										<a href="https://datastudio.google.com/reporting/5453b5e5-ddb2-45bf-a028-fc2eb0c65478" class="image fit" title="View"><img src="images/dashboard.png" alt="" />Google Business Profile Insights Dashboard</a>
 									</article>
 									<article class="item">
-										<a href="https://datastudio.google.com/reporting/81446524-2488-48f9-a098-08d5fc1f55f7" class="image fit" title="View"><img src="images/trend1.jpg" alt="" />Google Business Profile Hospital Ratings Report</a>
+										<a href="https://datastudio.google.com/reporting/81446524-2488-48f9-a098-08d5fc1f55f7" class="image fit" title="View"><img src="images/trend.png" alt="" />Google Business Profile Hospital Ratings Report</a>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/anupama-bhatta/predator-prey-simulation" class="image fit" title="View"><img src="images/predator.png" alt="" />Predator Prey Simulation Game</a>
+										<a href="https://github.com/anupamabhatta/predator-prey-simulation" class="image fit" title="View"><img src="images/predator.png" alt="" />Predator Prey Simulation Game</a>
 									</article>
 									<article class="item">
-										<a href="https://github.com/anupama-bhatta/calculator" class="image fit" title="View"><img src="images/calculator.png" alt="" />Workout & BMI Calculator</a>
+										<a href="https://github.com/anupamabhatta/calculator" class="image fit" title="View"><img src="images/calculator.png" alt="" />Workout & BMI Calculator</a>
 									</article>
 								</div>
 							</div>
 
 							<footer>
-								<a href="https://github.com/anupama-bhatta" class="button">Full Potfolio</a>
+								<a href="https://github.com/anupamabhatta" class="button">Full Portfolio</a>
 							</footer>
 						</div>
 					</section>
@@ -126,12 +125,12 @@
 
 							<p>For all inquiries, please send me an email using the form below.</p>
 
-							<form method="post" action="mailto:someone@example.com" enctype="text/plain">
+							<form method="post" action="mailto:bhatta.anupama1@gmail.com" enctype="text/plain">
 								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="col-6 col-12-mobile"><input type="text" name="Name" placeholder="Name" /></div>
+									<div class="col-6 col-12-mobile"><input type="text" name="Email" placeholder="Email" /></div>
 									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
+										<textarea name="Message" placeholder="Message"></textarea>
 									</div>
 									<div class="col-12">
 										<input type="submit" value="Send Message" />
