--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 							<p>For all inquiries, please send me an email using the form below.</p>
 
-							<form method="post" action="mailto:bhatta.anupama1@gmail.com" enctype="text/plain">
+							<form method="post" action="https://mailto:bhatta.anupama1@gmail.com" enctype="text/plain">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="Name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="Email" placeholder="Email" /></div>
