Formatting index.html

--- a/index.html
+++ b/index.html
@@ -5,177 +5,188 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Anupama Bhatta</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<div id="header">
+<head>
+	<title>Anupama Bhatta</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-				<div class="top">
+<body class="is-preload">
 
-					<!-- Logo -->
-						<div id="logo">
-							<span class="image avatar48"><img src="anu.svg" alt="" /></span>
-							<h1 id="title">Anupama Bhatta</h1>
-<<<<<<< HEAD
-							<p>Graduate Student @ University of Michigan - Ann Arbor</p>
-=======
-							<p>Graduate Student @ University of Michigan - Ann Arbor</p>
->>>>>>> b74c628 (Updating my personal website)
-						</div>
+	<!-- Header -->
+	<div id="header">
 
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-user">About</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
-							</ul>
-						</nav>
+		<div class="top">
 
+			<!-- Logo -->
+			<div id="logo">
+				<span class="image avatar48"><img src="anu.svg" alt="" /></span>
+				<h1 id="title">Anupama Bhatta</h1>
+
+				<p>Graduate Student @ University of Michigan - Ann Arbor</p>
+			</div>
+
+			<!-- Nav -->
+			<nav id="nav">
+				<ul>
+					<li><a href="#top" id="top-link"><span class="icon solid fa-user">About</span></a></li>
+					<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a>
+					</li>
+					<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a>
+					</li>
+				</ul>
+			</nav>
+
+		</div>
+
+		<div class="bottom">
+
+			<!-- Social Icons -->
+			<ul class="icons">
+				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<li><a href="https://github.com/anupamabhatta" class="icon brands fa-github"><span
+							class="label">Github</span></a></li>
+				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+				<li><a href="mailto:bhatta.anupama1@gmail.com" class="icon solid fa-envelope"><span
+							class="label">Email</span></a></li>
+			</ul>
+
+		</div>
+
+	</div>
+
+	<!-- Main -->
+	<div id="main">
+
+		<!-- About -->
+		<section id="top" class="one dark cover">
+			<div class="container">
+
+				<header>
+					<h2 class="alt">Hi, I'm Anupama Bhatta.</h2>
+					<p>I work as a Senior Solutions Analyst at <a href="https://loyalhealth.com">Loyal </a>, one of the
+						first companies to offer end-to-end digital and AI-powered solutions spanning the entirety of
+						the patient journey.<br />
+						At Loyal, I am responsible for managing and improving listings data to publish accurate and
+						complete information to 3rd party listing sites including Google, Bing, Apple, Facebook, and
+						Foursquare.<br /><br />
+						My passion lies in problem-solving by leveraging data to derive and share valuable
+						insights.</br>
+						If it helps to know, I built this website by myself (starting from a template) which further
+						demonstrates my ability to rapidly learn new software, then implement it.</br>
+						If you wish to learn more about my skills, do check out my <a
+							href="https://github.com/anupamabhatta">GitHub</a> profile!<br />
+					</p>
+				</header>
+
+				<footer>
+					<a href="#contact" class="button scrolly">Contact Me</a>
+				</footer>
+
+			</div>
+		</section>
+
+		<!-- Portfolio -->
+		<section id="portfolio" class="two">
+			<div class="container">
+
+				<header>
+					<h2>Portfolio</h2>
+				</header>
+				<div class="row">
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="https://github.com/anupamabhatta/tictactoegame" class="image fit" title="View"><img
+									src="images/tictactoe.png" alt="" />Tic-Tac-Toe Game</a>
+						</article>
+						<article class="item">
+							<a href="https://github.com/anupamabhatta/collegedirectory" class="image fit"
+								title="View"><img src="images/directory.png" alt="" />College Directory Project</a>
+						</article>
+					</div>
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="https://datastudio.google.com/reporting/5453b5e5-ddb2-45bf-a028-fc2eb0c65478"
+								class="image fit" title="View"><img src="images/dashboard.png" alt="" />Google Business
+								Profile Insights Dashboard</a>
+						</article>
+						<article class="item">
+							<a href="https://datastudio.google.com/reporting/81446524-2488-48f9-a098-08d5fc1f55f7"
+								class="image fit" title="View"><img src="images/trend.png" alt="" />Google Business
+								Profile Hospital Ratings Report</a>
+						</article>
+					</div>
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="https://github.com/anupamabhatta/predator-prey-simulation" class="image fit"
+								title="View"><img src="images/predator.png" alt="" />Predator Prey Simulation Game</a>
+						</article>
+						<article class="item">
+							<a href="https://github.com/anupamabhatta/calculator" class="image fit" title="View"><img
+									src="images/calculator.png" alt="" />Workout & BMI Calculator</a>
+						</article>
+					</div>
 				</div>
 
-				<div class="bottom">
-
-					<!-- Social Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://github.com/anupamabhatta" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="mailto:bhatta.anupama1@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-
-				</div>
-
+				<footer>
+					<a href="https://github.com/anupamabhatta" class="button">Full Portfolio</a>
+				</footer>
 			</div>
+		</section>
 
-		<!-- Main -->
-			<div id="main">
+		<!-- Contact -->
+		<section id="contact" class="four">
+			<div class="container">
 
-				<!-- About -->
-					<section id="top" class="one dark cover">
-						<div class="container">
+				<header>
+					<h2>Contact</h2>
+				</header>
 
-							<header>
-								<h2 class="alt">Hi, I'm Anupama Bhatta.</h2>
-								<p>I work as a Senior Solutions Analyst at <a href="https://loyalhealth.com">Loyal </a>, one of the first companies to offer end-to-end digital and AI-powered solutions spanning the entirety of the patient journey.<br/>
-								At Loyal, I am responsible for managing and improving listings data to publish accurate and complete information to 3rd party listing sites including Google, Bing, Apple, Facebook, and Foursquare.<br/><br/>
-								My passion lies in problem-solving by leveraging data to derive and share valuable insights.</br>
-								If it helps to know, I built this website by myself (starting from a template) which further demonstrates my ability to rapidly learn new software, then implement it.</br>
-									If you wish to learn more about my skills, do check out my <a href="https://github.com/anupamabhatta">GitHub</a> profile!<br/>
-								</p>
-							</header>
+				<p>For all inquiries, please send me an email using the form below.</p>
 
-							<footer>
-								<a href="#contact" class="button scrolly">Contact Me</a>
-							</footer>
+				<form method="post" action="mailto:bhatta.anupama1@gmail.com" enctype="text/plain">
+					<div class="row">
+
+						<div class="col-6 col-12-mobile"><input type="text" name="Name" placeholder="Name" /></div>
+						<div class="col-6 col-12-mobile"><input type="text" name="Email" placeholder="Email" /></div>
+						<div class="col-12">
+							<textarea name="Message" placeholder="Message"></textarea>
 
 						</div>
-					</section>
-
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
-						<div class="container">
-
-							<header>
-								<h2>Portfolio</h2>
-							</header>
-							<div class="row">
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="https://github.com/anupamabhatta/tictactoegame" class="image fit" title="View"><img src="images/tictactoe.png" alt="" />Tic-Tac-Toe Game</a>
-									</article>
-									<article class="item">
-										<a href="https://github.com/anupamabhatta/collegedirectory" class="image fit" title="View"><img src="images/directory.png" alt="" />College Directory Project</a>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="https://datastudio.google.com/reporting/5453b5e5-ddb2-45bf-a028-fc2eb0c65478" class="image fit" title="View"><img src="images/dashboard.png" alt="" />Google Business Profile Insights Dashboard</a>
-									</article>
-									<article class="item">
-										<a href="https://datastudio.google.com/reporting/81446524-2488-48f9-a098-08d5fc1f55f7" class="image fit" title="View"><img src="images/trend.png" alt="" />Google Business Profile Hospital Ratings Report</a>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="https://github.com/anupamabhatta/predator-prey-simulation" class="image fit" title="View"><img src="images/predator.png" alt="" />Predator Prey Simulation Game</a>
-									</article>
-									<article class="item">
-										<a href="https://github.com/anupamabhatta/calculator" class="image fit" title="View"><img src="images/calculator.png" alt="" />Workout & BMI Calculator</a>
-									</article>
-								</div>
-							</div>
-
-							<footer>
-								<a href="https://github.com/anupamabhatta" class="button">Full Portfolio</a>
-							</footer>
+						<div class="col-12">
+							<input type="submit" value="Send Message" />
 						</div>
-					</section>
-
-				<!-- Contact -->
-					<section id="contact" class="four">
-						<div class="container">
-
-							<header>
-								<h2>Contact</h2>
-							</header>
-
-							<p>For all inquiries, please send me an email using the form below.</p>
-
-							<form method="post" action="mailto:bhatta.anupama1@gmail.com" enctype="text/plain">
-								<div class="row">
-<<<<<<< HEAD
-									<div class="col-6 col-12-mobile"><input type="text" name="Name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="Email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="Message" placeholder="Message"></textarea>
-=======
-									<div class="col-6 col-12-mobile"><input type="text" name="Name" placeholder ="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="Email" placeholder ="Email" /></div>
-									<div class="col-12">
-										<textarea name="Message" placeholder ="Message"></textarea>
->>>>>>> b74c628 (Updating my personal website)
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
-
-						</div>
-					</section>
+					</div>
+				</form>
 
 			</div>
+		</section>
 
-		<!-- Footer -->
-			<div id="footer">
+	</div>
 
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+	<!-- Footer -->
+	<div id="footer">
 
-			</div>
+		<!-- Copyright -->
+		<ul class="copyright">
+			<li>&copy; Untitled. All rights reserved.</li>
+			<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+		</ul>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
-<<<<<<< HEAD
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
-=======
-</html>
->>>>>>> b74c628 (Updating my personal website)
