Update photo and current job title

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 
 			<!-- Logo -->
 			<div id="logo">
-				<span class="image avatar48"><img src="anu.svg" alt="" /></span>
+				<span class="image avatar48"><img src="new headshot.png" alt="" /></span>
 				<h1 id="title">Anupama Bhatta</h1>
 
-				<p>Graduate Student @ University of Michigan - Ann Arbor</p>
+				<p>Graduate Student @</p>
+				<p>University of Michigan - Ann Arbor</p>
 			</div>
 
 			<!-- Nav -->
