--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 			<!-- Logo -->
 			<div id="logo">
-				<span class="image avatar48"><img src="new headshot.png" alt="" /></span>
-				<h1 id="title">Anupama Bhatta</h1>
-
-				<p>Graduate Student @</p>
-				<p>University of Michigan - Ann Arbor</p>
+				<span class="image avatar48"><img src="new headshot.png" alt="Profile Picture"></span>
+				</br></br></br></br></br></br>
+				<h1>Anupama Bhatta</h1>
+				<h5>Graduate Student @</h5>
+				<h5>University of Michigan - Ann Arbor</h5>
 			</div>
 
 			<!-- Nav -->
@@ -67,19 +67,27 @@
 			<div class="container">
 
 				<header>
-					<h2 class="alt">Hi, I'm Anupama Bhatta.</h2>
-					<p>I work as a Senior Solutions Analyst at <a href="https://loyalhealth.com">Loyal </a>, one of the
-						first companies to offer end-to-end digital and AI-powered solutions spanning the entirety of
-						the patient journey.<br />
-						At Loyal, I am responsible for managing and improving listings data to publish accurate and
-						complete information to 3rd party listing sites including Google, Bing, Apple, Facebook, and
-						Foursquare.<br /><br />
-						My passion lies in problem-solving by leveraging data to derive and share valuable
-						insights.</br>
-						If it helps to know, I built this website by myself (starting from a template) which further
-						demonstrates my ability to rapidly learn new software, then implement it.</br>
-						If you wish to learn more about my skills, do check out my <a
-							href="https://github.com/anupamabhatta">GitHub</a> profile!<br />
+					<h2 class="alt">About Me</h2>
+					<p>Hello! I am a first-year graduate student at the <a
+							href="https://www.si.umich.edu">University
+							of Michigan School of Information</a>, where I am
+						pursuing a Master of Science in Information (MSI), with a specialization in data science. </br>
+
+						Before embarking on this exciting academic journey, I worked as a Senior Solutions
+						Analyst at <a href="https://loyalhealth.com">Loyal</a> for three years, where I spearheaded the
+						management and enhancement of listings data, ensuring the dissemination of accurate and
+						comprehensive information across various third party listing management platforms including
+						Google, Bing, Apple, Facebook, and Foursquare. </br> </br>
+
+						As a dedicated problem-solver, I find fulfillment in leveraging my data science skills to
+						uncover actionable insights, collaborate cross-functionally, and determine innovative solutions
+						that drive progress. My passion is utilizing analytical thinking and precision to unravel
+						complex challenges and enable data-driven decision-making that solves multifaceted problems.
+						</br>
+
+						For a deeper dive into my skills and projects, I invite you to explore my <a
+							href="https://github.com/anupamabhatta">GitHub</a> profile. Let's connect and explore the
+						boundless possibilities that data science has to offer!
 					</p>
 				</header>
 
