Update my personal website

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
 			<!-- Logo -->
 			<div id="logo">
-				<span class="image avatar48"><img src="new headshot.png" alt="Profile Picture"></span>
-				</br></br></br></br></br></br>
+				<div class="image avatar48"><img src="new headshot.png" alt="Profile Picture"></div>
 				<h1>Anupama Bhatta</h1>
 				<h5>Graduate Student @</h5>
 				<h5>University of Michigan - Ann Arbor</h5>
@@ -33,6 +32,7 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="#top" id="top-link"><span class="icon solid fa-user">About</span></a></li>
+					<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Resume</span></a></li>
 					<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a>
 					</li>
 					<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a>
@@ -47,7 +47,8 @@
 			<!-- Social Icons -->
 			<ul class="icons">
 				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<li><a href="https://www.messenger.com/t/100010219770014/" class="icon brands fa-facebook-f"><span
+							class="label">Facebook</span></a></li>
 				<li><a href="https://github.com/anupamabhatta" class="icon brands fa-github"><span
 							class="label">Github</span></a></li>
 				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
@@ -68,8 +69,7 @@
 
 				<header>
 					<h2 class="alt">About Me</h2>
-					<p>Hello! I am a first-year graduate student at the <a
-							href="https://www.si.umich.edu">University
+					<p>Hello! I am a first-year graduate student at the <a href="https://www.si.umich.edu">University
 							of Michigan School of Information</a>, where I am
 						pursuing a Master of Science in Information (MSI), with a specialization in data science. </br>
 
@@ -98,6 +98,33 @@
 			</div>
 		</section>
 
+		<!-- Resume -->
+		<section id="resume" class="five">
+			<div class="container">
+
+				<header>
+					<h2>Resume</h2>
+				</header>
+				<div class="row">
+					<div class="col-4 col-12-mobile">
+					</div>
+					<div class="col-4 col-12-mobile">
+						<div class="resume-wrapper">
+							<!-- Image Preview -->
+							<a href="docs/resume.pdf" target="_blank">
+								<img class="image fit" title="View" src="images/resume.png" alt="" />
+							</a>
+							<!-- Link to PDF -->
+							<a class="pdf-link" href="docs/resume.pdf" target="_blank"></a>
+						</div>
+					</div>
+				</div>
+				<footer>
+					<a href="docs/resume.pdf" target="_blank" class="button">View Resume</a>
+				</footer>
+		</section>
+
+
 		<!-- Portfolio -->
 		<section id="portfolio" class="two">
 			<div class="container">
@@ -118,12 +145,12 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://datastudio.google.com/reporting/5453b5e5-ddb2-45bf-a028-fc2eb0c65478"
+							<a href="docs/dashboard.pdf" target="_blank"
 								class="image fit" title="View"><img src="images/dashboard.png" alt="" />Google Business
 								Profile Insights Dashboard</a>
 						</article>
 						<article class="item">
-							<a href="https://datastudio.google.com/reporting/81446524-2488-48f9-a098-08d5fc1f55f7"
+							<a href="docs/report.pdf" target="_blank"
 								class="image fit" title="View"><img src="images/trend.png" alt="" />Google Business
 								Profile Hospital Ratings Report</a>
 						</article>
