Update my personal website.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
@@ -32,7 +27,7 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="#top" id="top-link"><span class="icon solid fa-user">About</span></a></li>
-					<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Resume</span></a></li>
+					<!-- <li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Resume</span></a></li> -->
 					<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a>
 					</li>
 					<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a>
@@ -46,14 +41,15 @@
 
 			<!-- Social Icons -->
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="https://www.messenger.com/t/100010219770014/" class="icon brands fa-facebook-f"><span
+				<li><a href="mailto:bhatta.anupama1@gmail.com" class="icon solid fa-envelope" title="Email"><span
+					class="label">Email</span></a></li>
+				<li><a href="#" class="icon brands fa-twitter" title="Twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.messenger.com/t/100010219770014/" class="icon brands fa-facebook-f" title="Facebook"><span
 							class="label">Facebook</span></a></li>
-				<li><a href="https://github.com/anupamabhatta" class="icon brands fa-github"><span
-							class="label">Github</span></a></li>
-				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-				<li><a href="mailto:bhatta.anupama1@gmail.com" class="icon solid fa-envelope"><span
-							class="label">Email</span></a></li>
+				<li><a href="https://github.com/anupamabhatta" class="icon brands fa-github" title="GitHub"><span
+							class="label">GitHub</span></a></li>
+				<li><a href="docs/resume.pdf"
+					target="_blank" class="icon solid fa-file" title="Resume"><span class="label">Resume</span></a></li>
 			</ul>
 
 		</div>
@@ -68,24 +64,29 @@
 			<div class="container">
 
 				<header>
-					<h2 class="alt">About Me</h2>
-					<p>Hello! I am a first-year graduate student at the <a href="https://www.si.umich.edu">University
+					<h2 class="alt">Hi, I'm Anupama.</h2>
+					<p>I am a first-year graduate student at the <a href="https://www.si.umich.edu">University
 							of Michigan School of Information</a>, where I am
-						pursuing a Master of Science in Information (MSI), with a specialization in data science. </br>
+						pursuing a Master's degree in Information (MSI), with a specialization in data science. </br>
 
-						Before embarking on this exciting academic journey, I worked as a Senior Solutions
-						Analyst at <a href="https://loyalhealth.com">Loyal</a> for three years, where I spearheaded the
+						Prior to embarking on this exciting academic journey, I worked as a Senior Solutions
+						Analyst at <a href="https://loyalhealth.com">Loyal</a> for almost three years, where I
+						spearheaded the
 						management and enhancement of listings data, ensuring the dissemination of accurate and
 						comprehensive information across various third party listing management platforms including
 						Google, Bing, Apple, Facebook, and Foursquare. </br> </br>
 
-						As a dedicated problem-solver, I find fulfillment in leveraging my data science skills to
-						uncover actionable insights, collaborate cross-functionally, and determine innovative solutions
+						As a dedicated problem-solver, I find fulfillment in leveraging my
+						data science skills to
+						uncover actionable insights, collaborate cross-functionally, and determine innovative
+						solutions
 						that drive progress. My passion is utilizing analytical thinking and precision to unravel
-						complex challenges and enable data-driven decision-making that solves multifaceted problems.
+						complex challenges and enable data-driven decision-making that solves multifaceted
+						problems.
 						</br>
 
-						For a deeper dive into my skills and projects, I invite you to explore my <a
+						For a deeper dive into my skills and projects, I invite you to view my <a href="docs/resume.pdf"
+							target="_blank">resumé</a> and explore my <a
 							href="https://github.com/anupamabhatta">GitHub</a> profile. Let's connect and explore the
 						boundless possibilities that data science has to offer!
 					</p>
@@ -99,7 +100,7 @@
 		</section>
 
 		<!-- Resume -->
-		<section id="resume" class="five">
+		<!-- <section id="resume" class="five">
 			<div class="container">
 
 				<header>
@@ -109,20 +110,20 @@
 					<div class="col-4 col-12-mobile">
 					</div>
 					<div class="col-4 col-12-mobile">
-						<div class="resume-wrapper">
-							<!-- Image Preview -->
-							<a href="docs/resume.pdf" target="_blank">
+						<div class="resume-wrapper"> -->
+		<!-- Image Preview -->
+		<!-- <a href="docs/resume.pdf" target="_blank">
 								<img class="image fit" title="View" src="images/resume.png" alt="" />
-							</a>
-							<!-- Link to PDF -->
-							<a class="pdf-link" href="docs/resume.pdf" target="_blank"></a>
+							</a> -->
+		<!-- Link to PDF -->
+		<!-- <a class="pdf-link" href="docs/resume.pdf" target="_blank"></a>
 						</div>
 					</div>
 				</div>
 				<footer>
 					<a href="docs/resume.pdf" target="_blank" class="button">View Resume</a>
 				</footer>
-		</section>
+		</section> -->
 
 
 		<!-- Portfolio -->
@@ -145,13 +146,13 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="docs/dashboard.pdf" target="_blank"
-								class="image fit" title="View"><img src="images/dashboard.png" alt="" />Google Business
+							<a href="docs/dashboard.pdf" target="_blank" class="image fit" title="View"><img
+									src="images/dashboard.png" alt="" />Google Business
 								Profile Insights Dashboard</a>
 						</article>
 						<article class="item">
-							<a href="docs/report.pdf" target="_blank"
-								class="image fit" title="View"><img src="images/trend.png" alt="" />Google Business
+							<a href="docs/report.pdf" target="_blank" class="image fit" title="View"><img
+									src="images/trend.png" alt="" />Google Business
 								Profile Hospital Ratings Report</a>
 						</article>
 					</div>
