Update my portfolio.

--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
 			<!-- Social Icons -->
 			<ul class="icons">
 				<li><a href="mailto:bhatta.anupama1@gmail.com" class="icon solid fa-envelope" title="Email"><span
-					class="label">Email</span></a></li>
-				<li><a href="#" class="icon brands fa-twitter" title="Twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="https://www.messenger.com/t/100010219770014/" class="icon brands fa-facebook-f" title="Facebook"><span
-							class="label">Facebook</span></a></li>
+							class="label">Email</span></a></li>
+				<li><a href="#" class="icon brands fa-twitter" title="Twitter"><span class="label">Twitter</span></a>
+				</li>
+				<li><a href="https://www.messenger.com/t/100010219770014/" class="icon brands fa-facebook-f"
+						title="Facebook"><span class="label">Facebook</span></a></li>
 				<li><a href="https://github.com/anupamabhatta" class="icon brands fa-github" title="GitHub"><span
 							class="label">GitHub</span></a></li>
-				<li><a href="docs/resume.pdf"
-					target="_blank" class="icon solid fa-file" title="Resume"><span class="label">Resume</span></a></li>
+				<li><a href="docs/resume.pdf" target="_blank" class="icon solid fa-file" title="Resume"><span
+							class="label">Resume</span></a></li>
 			</ul>
 
 		</div>
@@ -65,30 +66,27 @@
 
 				<header>
 					<h2 class="alt">Hi, I'm Anupama.</h2>
-					<p>I am a first-year graduate student at the <a href="https://www.si.umich.edu">University
-							of Michigan School of Information</a>, where I am
-						pursuing a Master's degree in Information (MSI), with a specialization in data science. </br>
+					<p>I am a first-year graduate student at the <a href="https://www.si.umich.edu">
+							University of Michigan School of Information</a>, where I am pursuing a Master's
+						degree in Information (MSI), with a specialization in data science. </br>
 
 						Prior to embarking on this exciting academic journey, I worked as a Senior Solutions
 						Analyst at <a href="https://loyalhealth.com">Loyal</a> for almost three years, where I
-						spearheaded the
-						management and enhancement of listings data, ensuring the dissemination of accurate and
-						comprehensive information across various third party listing management platforms including
-						Google, Bing, Apple, Facebook, and Foursquare. </br> </br>
+						spearheaded the management and enhancement of listings data, ensuring the dissemination
+						of accurate and comprehensive information across various third party listing management
+						platforms including Google, Bing, Apple, Facebook, and Foursquare. </br> </br>
 
-						As a dedicated problem-solver, I find fulfillment in leveraging my
-						data science skills to
+						As a dedicated problem-solver, I find fulfillment in leveraging my data science skills to
 						uncover actionable insights, collaborate cross-functionally, and determine innovative
-						solutions
-						that drive progress. My passion is utilizing analytical thinking and precision to unravel
-						complex challenges and enable data-driven decision-making that solves multifaceted
-						problems.
+						solutions that drive progress. My passion lies in utilizing
+						analytical thinking and precision to unravel complex challenges and enable data-driven
+						decision-making that solves multifaceted problems.
 						</br>
 
 						For a deeper dive into my skills and projects, I invite you to view my <a href="docs/resume.pdf"
 							target="_blank">resumé</a> and explore my <a
-							href="https://github.com/anupamabhatta">GitHub</a> profile. Let's connect and explore the
-						boundless possibilities that data science has to offer!
+							href="https://github.com/anupamabhatta">GitHub</a>
+						profile. Let's connect and explore the boundless possibilities that data science has to offer!
 					</p>
 				</header>
 
@@ -136,8 +134,27 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://github.com/anupamabhatta/tictactoegame" class="image fit" title="View"><img
-									src="images/tictactoe.png" alt="" />Tic-Tac-Toe Game</a>
+							<a href="https://github.com/anupamabhatta/PythonProjects" class="image fit"
+								title="View"><img src="images/python.png" alt="" />Python Projects</a>
+						</article>
+						<article class="item">
+							<a href="docs/dashboard.pdf" target="_blank" class="image fit" title="View"><img
+									src="images/dashboard.png" alt="" />Google Business
+								Profile Insights Dashboard</a>
+						</article>
+						<article class="item">
+							<a href="https://github.com/anupamabhatta/predator-prey-simulation" class="image fit"
+								title="View"><img src="images/predator.png" alt="" />Predator Prey Simulation Game</a>
+						</article>
+					</div>
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="https://github.com/anupamabhatta/SQLFinalProject" class="image fit"
+								title="View"><img src="images/sql.png" alt="" />SQL Projects</a>
+						</article>
+						<article class="item">
+							<a href="https://github.com/anupamabhatta/JupyterNotebooks" class="image fit"
+								title="View"><img src="images/jupyter.svg" alt="" />Jupyter Notebooks</a>
 						</article>
 						<article class="item">
 							<a href="https://github.com/anupamabhatta/collegedirectory" class="image fit"
@@ -146,24 +163,17 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="docs/dashboard.pdf" target="_blank" class="image fit" title="View"><img
-									src="images/dashboard.png" alt="" />Google Business
-								Profile Insights Dashboard</a>
+							<a href="https://github.com/anupamabhatta/RProjects" class="image fit" title="View"><img
+									src="images/R.png" alt="" />R Projects</a>
 						</article>
 						<article class="item">
 							<a href="docs/report.pdf" target="_blank" class="image fit" title="View"><img
 									src="images/trend.png" alt="" />Google Business
 								Profile Hospital Ratings Report</a>
 						</article>
-					</div>
-					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://github.com/anupamabhatta/predator-prey-simulation" class="image fit"
-								title="View"><img src="images/predator.png" alt="" />Predator Prey Simulation Game</a>
-						</article>
-						<article class="item">
-							<a href="https://github.com/anupamabhatta/calculator" class="image fit" title="View"><img
-									src="images/calculator.png" alt="" />Workout & BMI Calculator</a>
+							<a href="https://github.com/anupamabhatta/tictactoegame" class="image fit" title="View"><img
+									src="images/tictactoe.png" alt="" />Tic-Tac-Toe Game</a>
 						</article>
 					</div>
 				</div>
