Final touches for the portfolio.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						title="Facebook"><span class="label">Facebook</span></a></li>
 				<li><a href="https://github.com/anupamabhatta" class="icon brands fa-github" title="GitHub"><span
 							class="label">GitHub</span></a></li>
-				<li><a href="docs/resume.pdf" target="_blank" class="icon solid fa-file" title="Resume"><span
+				<li><a href="docs/resume.pdf" target="_blank" class="icon fa-solid fa-file" title="Resume"><span
 							class="label">Resume</span></a></li>
 			</ul>
 
@@ -71,7 +71,7 @@
 						degree in Information (MSI), with a specialization in data science. </br>
 
 						Prior to embarking on this exciting academic journey, I worked as a Senior Solutions
-						Analyst at <a href="https://loyalhealth.com">Loyal</a> for almost three years, where I
+						Analyst at <a href="https://loyalhealth.com">Loyal Health</a> for almost three years, where I
 						spearheaded the management and enhancement of listings data, ensuring the dissemination
 						of accurate and comprehensive information across various third party listing management
 						platforms including Google, Bing, Apple, Facebook, and Foursquare. </br> </br>
@@ -138,8 +138,8 @@
 								title="View"><img src="images/python.png" alt="" />Python Projects</a>
 						</article>
 						<article class="item">
-							<a href="https://github.com/anupamabhatta/tictactoegame" class="image fit" title="View"><img
-									src="images/tictactoe.png" alt="" />Tic-Tac-Toe Game</a>
+							<a href="https://github.com/anupamabhatta/JupyterNotebooks" class="image fit"
+								title="View"><img src="images/jupyter.svg" alt="" />Jupyter Notebooks</a>
 						</article>
 						<article class="item">
 							<a href="docs/dashboard.pdf" target="_blank" class="image fit" title="View"><img
@@ -153,8 +153,8 @@
 								title="View"><img src="images/sql.png" alt="" />SQL Projects</a>
 						</article>
 						<article class="item">
-							<a href="https://github.com/anupamabhatta/JupyterNotebooks" class="image fit"
-								title="View"><img src="images/jupyter.svg" alt="" />Jupyter Notebooks</a>
+							<a href="https://github.com/anupamabhatta/predator-prey-simulation" class="image fit"
+								title="View"><img src="images/predator.png" alt="" />Predator Prey Simulation Game</a>
 						</article>
 						<article class="item">
 							<a href="https://github.com/anupamabhatta/collegedirectory" class="image fit"
@@ -167,8 +167,8 @@
 									src="images/R.png" alt="" />R Projects</a>
 						</article>
 						<article class="item">
-							<a href="https://github.com/anupamabhatta/predator-prey-simulation" class="image fit"
-								title="View"><img src="images/predator.png" alt="" />Predator Prey Simulation Game</a>
+							<a href="https://github.com/anupamabhatta/tictactoegame" class="image fit" title="View"><img
+									src="images/tictactoe.png" alt="" />Tic-Tac-Toe Game</a>
 						</article>
 						<article class="item">
 							<a href="docs/report.pdf" target="_blank" class="image fit" title="View"><img
